<resources>
    <string name="app_name">DayDayUp</string>
    <string name="jojo1">JOJO的奇妙冒险：幻影血脉</string>
    <string name="jojo2">JOJO的奇妙冒险：战斗潮流</string>
    <string name="jojo3">JOJO的奇妙冒险：星尘斗士</string>
    <string name="jojo4">JOJO的奇妙冒险：疯狂钻石</string>
    <string name="jojo5">JOJO的奇妙冒险：黄金之风</string>
    <string name="jojo6">JOJO的奇妙冒险：石之海</string>
    <string name="warning">好好学习！看什么jojo</string>
    <string name="score1">9.2分</string>
    <string name="score2">9.7分</string>
    <string name="score3">9.8分</string>
    <string name="score4">9.2分</string>
    <string name="score5">9.6分</string>
    <string name="score6">暂无</string>
    <string name="title_activity_linear">LinearActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="view_details">jojo详情介绍</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

<!--    <string name="header_scrolling_behavior">com.bytedance.i18n.daydayup.coordinateLayoutDemo.HeaderScrollingBehavior</string>-->
<!--    <string name="header_float_behavior">com.bytedance.i18n.daydayup.coordinateLayoutDemo.HeaderFloatBehavior</string>-->

    <string name="action_settings">Settings</string>
</resources>
