<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:dividerPadding="2dp">

        <RelativeLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/jojo1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/background_dark">
            </ImageView>

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/img1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/jojo1"
                android:textSize="20sp"
                android:typeface="serif"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/score1"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img1"
                android:layout_below="@+id/text1"
                android:text="@string/score1"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img1"
                android:layout_below="@id/score1"
                android:background="@drawable/play2"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/view2">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/jojo2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/background_dark">
            </ImageView>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/img2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/jojo2"
                android:textSize="20sp"
                android:typeface="serif"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/score2"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img2"
                android:layout_below="@+id/text2"
                android:text="@string/score2"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img2"
                android:layout_below="@id/score2"
                android:background="@drawable/play2"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/jojo3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/background_dark">
            </ImageView>

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/img3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/jojo3"
                android:textSize="20sp"
                android:typeface="serif"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/score3"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img3"
                android:layout_below="@+id/text3"
                android:text="@string/score2"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img3"
                android:layout_below="@id/score3"
                android:background="@drawable/play2"/>
        </RelativeLayout>

</LinearLayout>
